Fixed the margin collapse of the course panel and copied the information panel to be a template for the thesis exhibit panel

--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,7 @@ img {
     padding: 32px 72px 0;
     text-align: center;
     background-color: var(--background);
+    overflow: hidden;
 }
 
 .course-panel h2 {
